...
  <string name="tea_question_four">Are you a better member of the community think about things like obeying laws and meeting your responsibilities to society.  Do your actions have a positive or negative impact on other people?</string>
  <string name="logo">This is the logo for Recovery Enhancement Solutions</string>
  <string name="remarks">Remarks</string>
  <string name="directions">Write down one or two changes most important to you or click submit. </string>
  <string name="submit">Submit</string>
  <string name="treatmentPlan_name">Recommended Treatment Plan</string>
  <string name="finish_button">Finish</string>
  <string name="daily_wellness_question">Considering your current condition, how would you rate your overall wellness right now?</string>
  <string name="daily_wellness_title">Report your Daily Wellness</string>
  <string name="daily_wellness_rating">Your Rating:</string>
  <string name="daily_wellness_submit_button">Submit Rating</string>
  <string name="daily_wellness_toast">Recorded your daily wellness! Thank you!</string>
  <string name="daily_wellness_activity_desc">Daily Wellness</string>
...
