...
        android:text="@string/add"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addOutcomeMeasureButton"/>
      <Button
        android:id="@+id/finishButton"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_button_rectangle"
        android:text="@string/finish_button"
...
